<resources>
    <string name="app_name">FoodOnMeet</string>
    <string name="title_activity_login">Sign in</string>

    <string name="GOOGLE_MAPS_KEY">AIzaSyDAICqlfbgcfI9N7WX9Tcfq749j7CSK19E</string>
    <string name="API_PLACES_KEY">AIzaSyDAICqlfbgcfI9N7WX9Tcfq749j7CSK19E</string>


    <string name="sign_in">Sign In</string>
    <string name="no_account">No account yet ? Sign up</string>

    <string name="sign_out">Sign Out</string>
    <string name="distance_location">Distance from your location</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>

    <string name="crop_resize">Drag and resize</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_home">Home</string>
    <string name="title_chat">Chat</string>
    <string name="title_notifications">Notifications</string>
    <string name="country_spinner">Select a country</string>

    <string name="settings_account">Account</string>

    <string name="profile_setting">Settings</string>
    <string name="profile_edit">Edit profile</string>

    <string name="profile_setup_name">What\'s your name?</string>
    <string name="profile_setup_birthdate">What\'s your date of birth?</string>
    <string name="profile_setup_nationality">Where do you come from?</string>
    <string name="profile_setup_email">Enter your email address</string>
    <string name="profile_setup_password">Enter your password</string>
    <string name="profile_setup_name_hint">First name</string>
    <string name="profile_setup_email_hint">Email</string>
    <string name="profile_setup_password_hint">Password</string>
    <string name="next">Next</string>

    <string name="free_spots">Free spots left</string>
    <string name="host">Host</string>
    <string name="guests">Guests</string>
    <string name="send_message">Send a message</string>
    <string name="see_profile">See profile</string>
    <string name="booking">Start booking</string>
    <string name="view_location">Get the location</string>
    <string name="location_unavailable">Exact location only available after booking</string>
    <string name="location">Location</string>

    <string name="no_desc">No description available for this event</string>

    <string name="create_date">When are you hosting this event?</string>
    <string name="create_time">At what time do you want to meet with your guests?</string>
    <string name="create_guest_nb">How many guests do you accept?</string>
    <string name="create_location">Where will it happen?</string>
    <string name="create_title">Give a title to your event...</string>
    <string name="create_desc">...And a description</string>
    <string name="create_title_hint">Pizza party!</string>
    <string name="create_desc_hint">Hello! I\'m hosting a pizza party tonight at my place, please bring some chairs 😊</string>

    <string name="profile_bio">Bio</string>

    <string name="save">Save</string>
    <string name="error_empty_message">Please enter a message</string>
    <string name="error_message_failed">Faileed to send your message</string>

    <string name="distance_preferences">distance_pref</string>
</resources>
