<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="40dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:layout_alignParentTop="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_setup_email"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.App.Base"
            android:hint="@string/profile_setup_email_hint"
            android:inputType="textEmailAddress"/>

        <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:textAllCaps="false"
            android:layout_marginTop="100dp"
            android:background="@color/grey_500"
            android:textColor="@color/white"
            android:onClick="goToPassword"
            android:enabled="false"/>

    </LinearLayout>

</RelativeLayout>