<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlDetails"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity"
    android:visibility="gone"
    android:background="@color/grey_background">

    <include

        android:id="@+id/toolbar"
        layout="@layout/toolbar_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <ScrollView
        android:layout_below="@+id/toolbar"
        android:layout_above="@+id/btnBooking"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">


            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_margin="20dp"
                android:text="Tuesday 20th"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgProfile"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_below="@+id/tvDate"
                android:layout_margin="20dp"
                android:src="@drawable/ic_person_highpx" />

            <TextView
                android:id="@+id/tvDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvDate"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_toRightOf="@+id/imgProfile"
                android:background="@drawable/shape_event_desc"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp"
                android:paddingBottom="5dp"
                android:textColor="#000000"
                android:textSize="16dp" />

            <View
                android:id="@+id/viewTop"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/tvDesc"
                android:layout_marginTop="20dp"
                android:background="@color/grey_view" />

            <View
                android:id="@+id/viewMid"
                android:layout_width="1dp"
                android:layout_height="70dp"
                android:layout_below="@+id/viewTop"
                android:layout_centerHorizontal="true"
                android:background="@color/grey_view" />

            <View
                android:id="@+id/viewBottom"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/viewMid"
                android:background="@color/grey_view" />

            <LinearLayout
                android:id="@+id/llTv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/viewTop"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/tvNbGuests"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:inputType="numberDecimal"
                        android:text="3"
                        android:textColor="#000000"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/free_spots"
                        android:textColor="@color/grey_500"
                        android:textSize="18sp" />


                </LinearLayout>

                <TextView
                    android:id="@+id/tvTime"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="8pm"
                    android:textColor="#000000"
                    android:textSize="24sp" />

            </LinearLayout>

            <View
                android:id="@+id/viewHost"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/viewBottom"
                android:background="@color/grey_background" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llTv1"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/host"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/rlHost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/viewHost"
                android:layout_marginTop="8dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/eventHostPicture"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/ic_person_highpx" />

                <TextView
                    android:id="@+id/eventHostNameAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_toRightOf="@+id/eventHostPicture"
                    android:text="Name"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/eventHostFlag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="16dp" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/rlHost"
                android:background="@color/grey_view" />

            <Button
                android:id="@+id/btnProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rlHost"
                android:background="@android:color/transparent"
                android:text="@string/see_profile"
                android:textColor="@color/colorPrimary"
                android:onClick="viewProfile"/>

            <View
                android:id="@+id/viewButtonBottom"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/btnProfile"
                android:background="@color/grey_view" />

            <!--<View
                android:id="@+id/viewGuests"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/grey_view"
                android:layout_below="@+id/viewButtonBottom"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/viewButtonBottom"
                android:textSize="18sp"
                android:textColor="#000000"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:textStyle="bold"
                android:text="@string/guests"/>-->

        </RelativeLayout>

    </ScrollView>

    <Button
        android:id="@+id/btnBooking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/booking"
        android:layout_alignParentBottom="true"
        android:textColor="@color/white"
        android:onClick="startBooking"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <ProgressBar
            android:id="@+id/pbLoading"
            android:layout_gravity="center"
            android:visibility="gone"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:indeterminate="true" />

    </LinearLayout>

</RelativeLayout>